testsuite/bad/bad043.jl
int main() { 
   int else;
   return 1;
}
